# faceRecognition

./: .env  .gitignore  README.md  docker-compose.yml
.github/workflows/: CI_front.yml  super-linter.yml  test.yml
back/: Dockerfile  entrypoint.dev.sh  entrypoint.prod.sh  pyproject.toml
back/api/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
back/api/migrations/: 0001_initial.py  0002_remove_profile_user_alter_profile_id.py  0003_alter_profile_id.py
back/back/: settings.py  urls.py
front/: Dockerfile  package-lock.json  package.json
front/public/: index.html
front/src/: app.js
front/src/components/: AuthContent.js  BoundingBox.js  Camera.js  CamerasList.js  Copytight.js  DatabaseContent.js  Header.js  Navigator.js  ProfileForm.js  UserCard.js  UserRowCard.js  WebCam.js
front/src/containers/: Authentification.js  Database.js
