[tool.poetry]
name = "face recognition back"
version = "0.1.0"
description = ""
authors = ["sachabinder <sacha.binder@eeves.enpc.fr>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "4.1.2"
django-environ = "0.9.0"
djangorestframework = "^3.13.1"
django-cors-headers = "^3.13.0"
psycopg2 = "2.9.5"
Pillow = "^9.4.0"
tensorflow = {version = "^2.11.0", python = ">=3.9,<3.12"}
tensorflow-cpu-aws = {version = "^2.11.0", python = ">=3.9,<3.12"}
deepface = "^0.0.79"
[tool.poetry.dev-dependencies]
